--- a/x1.html
+++ b/x1.html
@@ -1,14 +1,6 @@
 <html lang="en-US"  class="no-js">
 <head>
 
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-53LT9N7');</script>
-<!-- End Google Tag Manager -->
-
     
 	<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -36,29 +28,30 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta name="doc-class" content="Published" />
 	<meta name="doc-rights" content="Public Domain" />
 	<link href="2021-22/images/favicon.png" rel="shortcut icon" type="image/png">
-	<!-- <title>Sahyadri College of Engineering & Management</title>  -->
+	<title>Sahyadri College of Engineering & Management</title>
 	<link rel="stylesheet" type="text/css" href="2021-22/assets/plugins/goodlayers-core/plugins/combine/style.css"/>	<link rel="stylesheet" type="text/css" href="2021-22/assets/plugins/goodlayers-core/include/css/page-builder.css"/>	<link rel="stylesheet" type="text/css" href="2021-22/assets/plugins/revslider/public/assets/css/settings.css"/>	<link rel="stylesheet" type="text/css" href="2021-22/assets/css/style-core.css"/>	<link rel="stylesheet" type="text/css" href="2021-22/assets/css/kingster-style-custom.css"/>	<link rel="stylesheet" type="text/css" href="2021-22/assets/css/custom-bootstrap-margin-padding.css"/>	<link rel="stylesheet" type="text/css" href="2021-22/assets/css/bootstrap.min.css"/>	<link rel="stylesheet" type="text/css" href="2021-22/assets/css/custom.css"/>	<link rel="stylesheet" type="text/css" href="2021-22/assets/plugins/sweetalert/css/sweetalert.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:700%2C400" rel="stylesheet" property="stylesheet" type="text/css" media="all">
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CABeeZee%3Aregular%2Citalic&amp;subset=latin%2Clatin-ext%2Cdevanagari&amp;ver=5.0.3' type='text/css' media='all' />
 
 
-<body >
+
+<body>
 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53LT9N7"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-<div class="kingster-body-outer-wrapper ">
-	<div class="kingster-body-wrapper clearfix  kingster-with-frame">
+<div class="kingster-body-outer-wrapper1 ">
+	<div class="kingster-body-wrapper1 clearfix1  kingster-with-frame1">
 
 		<!-- HEADER START -->
 		<!--TOP BAR Starts-->
-<div class="kingster-top-bar">
-	<div class="kingster-top-bar-background"></div>
-	<div class="kingster-top-bar-container kingster-container ">
-		<div class="kingster-top-bar-container-inner clearfix">
-			<div class="kingster-top-bar-left kingster-item-pdlr">
+<div class="kingster-top-bar1">
+	<div class="kingster-top-bar1-background1"></div>
+	<div class="kingster-top-bar1-container kingster-container ">
+		<div class="kingster-top-bar1-container-inner clearfix1">
+			<div class="kingster-top-bar1-left kingster-item-pdlr">
 				<i class="fa fa-envelope-open-o" style="font-size: 15px ;color: #96a2b8 ;margin-right: 2px ;"></i>
 				sahyadri@sahyadri.edu.in
 				<i class="fa fa-phone" style="font-size: 15px ;color: #96a2b8 ;margin-left: 5px ;margin-right: 2px ;"></i>
@@ -68,17 +61,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				<!--<a class="links" style="font-size: 15px ;color: #96a2b8 ;margin-left: 18px ;" href="../Home/mandatory" target="_blank" class="text-white"><i class="fa fa-fighter-jet"></i>Mandatory Disclosures</a>-->
 				<!--<a href="/Home/mandatory">Mandatory Disclosures</a>-->
 			</div>
-			<div class="kingster-top-bar-right kingster-item-pdlr">
-				<ul id="kingster-top-bar-menu" class="sf-menu kingster-top-bar-menu kingster-top-bar-right-menu">
+			<div class="kingster-top-bar1-right kingster-item-pdlr">
+				<ul id="kingster-top-bar1-menu" class="sf-menu kingster-top-bar1-menu kingster-top-bar1-right-menu">
 				    <li class="menu-item kingster-normal-menu"><a href="/Home/mandatory">Mandatory Disclosures</a></li>
 				    <li class="menu-item kingster-normal-menu"><a href="/files/ARI-I-1469.pdf" target="_blank"">ARIIA-2021 </a></li>
 					<li class="menu-item kingster-normal-menu"><a href="https://mba.sahyadri.edu.in/">MBA </a></li>
 					<!--<li class="menu-item kingster-normal-menu"><a href="/Home/enquiry">Admission Enquiry</a></li>-->
 					<li class="menu-item kingster-normal-menu"><a href="/Home/admission">Admission Procedure</a></li>
 				</ul>
-				<div class="kingster-top-bar-right-social"></div>
-				<a class="kingster-top-bar-right-button admission_open" href="/Home/enquiry">ADMISSION OPEN</a></div>
-		        <!--<a class="kingster-top-bar-right-button admission_open" href="/MCEST-2022" target="_blank"">MCEST -2022</a></div>-->
+				<div class="kingster-top-bar1-right-social"></div>
+				<a class="kingster-top-bar1-right-button admission_open" href="/Home/enquiry">ADMISSION OPEN</a></div>
+		        <!--<a class="kingster-top-bar1-right-button admission_open" href="/MCEST-2022" target="_blank"">MCEST -2022</a></div>-->
 		</div>
 	</div>
 </div>
@@ -87,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		data-navigation-offset="75px">
 	<div class="kingster-header-background"></div>
 	<div class="kingster-header-container  kingster-container">
-		<div class="kingster-header-container-inner clearfix">
+		<div class="kingster-header-container-inner clearfix1">
 			<div class="kingster-logo  kingster-item-pdlr">
 				<div class="kingster-logo-inner">
 					<a class="" href="/">
@@ -95,7 +88,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					</a>
 				</div>
 			</div>
-			<div class="kingster-navigation kingster-item-pdlr clearfix ">
+			<div class="kingster-navigation kingster-item-pdlr clearfix1 ">
 				<div class="kingster-main-menu" id="kingster-main-menu">
 					<ul id="menu-main-navigation-1" class="sf-menu">
 						<li class="menu-item kingster-normal-menu">
@@ -485,7 +478,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="kingster-mobile-header-wrap">
 	<div class="kingster-mobile-header kingster-header-background kingster-style-slide kingster-sticky-mobile-navigation "
 		 id="kingster-mobile-header">
-		<div class="kingster-mobile-header-container kingster-container clearfix">
+		<div class="kingster-mobile-header-container kingster-container clearfix1">
 			<div class="kingster-logo  kingster-item-pdlr">
 				<div class="kingster-logo-inner">
 					<a class="" href="/Home">
