--- a/te.html
+++ b/te.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
  <style>@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
-
+.slider25::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
+}
 .slider25{
+    position: absolute;
   max-width: 1100px;
   display: flex;
 }
@@ -66,8 +69,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-  </head>
-  <body>
+ 
     <div class="slider25 owl-carousel">
       <div class="card25">
         <div class="img">
@@ -119,7 +121,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis
       $(".slider25").owlCarousel({
         loop: true,
         autoplay: true,
-        autoplayTimeout: 2000, //2000ms = 2s;
+        autoplayTimeout: 1000, //2000ms = 2s;
         autoplayHoverPause: true,
       });
     </script>
